# graphguard

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-25-graphguard.md
examples/sample_project/: app.py  buggy_module.py  models.py  services.py  utils.py
src/graphguard/: __init__.py  __main__.py  cli.py
src/graphguard/api/: main.py
src/graphguard/dashboard/: app.py
src/graphguard/data/: __init__.py  dataset.py  git_mining.py
src/graphguard/graph/: __init__.py  features.py  graph_builder.py
src/graphguard/models/: __init__.py  baselines.py  evaluate.py  explain.py  gnn.py  train.py
src/graphguard/parser/: __init__.py  python_parser.py
src/graphguard/utils/: __init__.py  config.py  logging.py  optional_deps.py
tests/: test_api_security.py  test_dataset.py  test_explain.py  test_features.py  test_git_mining.py  test_graph_builder.py  test_parser.py
