[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphguard"
version = "0.1.0"
description = "GNN-Based Code Dependency Risk Analyzer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "networkx>=3.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
# GNN training/inference/explain (`graphguard train`, `graphguard explain`,
# POST /analyze, POST /explain). Not required for `graphguard analyze`
# (parse + graph + features only).
gnn = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
]
# FastAPI REST server (`graphguard api`).
serve = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]
# Streamlit dashboard (`graphguard dashboard`).
dash = [
    "streamlit>=1.25.0",
    "plotly>=5.15.0",
    "pyvis>=0.3.2",
]
# Git-history-based labeling (`--label-mode git`).
git = [
    "gitpython>=3.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
# Convenience group for local development: everything at once.
all = [
    "graphguard[gnn,serve,dash,git]",
]

[project.scripts]
graphguard = "graphguard.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
